:bug: Fix img width will be covered by high priority selector

--- a/src/less/gallery.less
+++ b/src/less/gallery.less
@@ -24,9 +24,9 @@
 
     .container {
       .img {
-        width: auto;
-        max-width: unset;
-        border-radius: @border-radius;
+        width: auto!important;
+        max-width: unset!important;
+        border-radius: @border-radius!important;
       }
     }
   }
